--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^11.0.3",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
+    "pannellum-react": "^1.2.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
