--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@googlemaps/js-api-loader": "^1.16.6",
     "@material-tailwind/react": "^2.1.9",
     "@react-google-maps/api": "^2.19.2",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
