--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "pannellum-react": "^1.2.4",
+    "pdf-viewer-reactjs": "^2.2.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
